@startuml
class UsersActivity {
~ Button btMainActivity
~ RecyclerView usersRecyclerView
~ UsersAdapter usersAdapter
~ ArrayList<String> userNameList
~ ArrayList<String> userGamesWonList
}

class LoginFragment {
~ Button btIntroActivity
~ EditText etUserNameLogin
~ TextView tvError
}

class GameActivity {
}
class RegisterFragment {
~ Button btIntroActivity
~ EditText etUserNameRegister
~ TextView tvError
}

class InstructionsFragment {
~ Button btGameFragment
~ CheckBox cbShowInstructions
}

class UsersAdapter {
- List<String> UserNameList
- List<String> UserGamesWonList
}

class UsersAdapter$UsersViewHolder {
~ TextView userNameTextView
~ TextView userGamesWonTextView
}

class MainActivity {
~ Button btGameFragment
~ TextView tvWelcome
}

class LoginActivity {
- {static} int SEND_SMS
}

class PhotoFragment {
~ Button btCamera
~ ImageView ivPhoto
~ TextView tvResult
~ ActivityResultLauncher<Intent> arLauncher
~ ProgressBar pbProgress
~ int IMAGE_SIZE
}

class User {
- String userName
}

class GameFragment {
~ Button btPhotoActivity
~ CheckBox cbObject0
}

class RecoverPasswordFragment {
- {static} int SEND_SMS
~ Button btLoginFragment
~ EditText etUserName
~ TextView tvError
}

class IntroActivity {
~ Button btLoginFragment
~ String currentUser
~ String DEFAULT_NAME
}

class WinFragment {
~ Button btGameFragment
}

class HelperDB {
+ {static} String DB_FILE
+ {static} String USERS_TABLE
+ {static} String USER_NAME
+ {static} String USER_PWD
+ {static} String USER_PHONE
+ {static} String USER_GAMES_WON
+ {static} String USER_SHOW_INSTRUCTIONS
~ SQLiteDatabase db
}



AppCompatActivity <|-- UsersActivity
Fragment <|-- LoginFragment
AppCompatActivity <|-- GameActivity
Fragment <|-- RegisterFragment
Fragment <|-- InstructionsFragment
Adapter <|-- UsersAdapter
UsersAdapter +.. UsersAdapter$UsersViewHolder
ViewHolder <|-- UsersAdapter$UsersViewHolder
AppCompatActivity <|-- MainActivity
AppCompatActivity <|-- LoginActivity
Fragment <|-- PhotoFragment
Fragment <|-- GameFragment
Fragment <|-- RecoverPasswordFragment
AppCompatActivity <|-- IntroActivity
Fragment <|-- WinFragment
SQLiteOpenHelper <|-- HelperDB
@enduml